--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,31 @@
-version: '2'
+version: '3'
 services: 
   db:
     image: postgres:latest
     volumes:
-      - "./.data/db:/var/lib/postgresql"
+      - ./.data/db:/var/lib/postgresql
     restart: always    
     environment:
       POSTGRES_DB: bitbucket
-      POSTGRES_USER: materliu
-      POSTGRES_PASSWORD: bitbucket
+      POSTGRES_USER: 
+      POSTGRES_PASSWORD: 
 
   bitbucket:
     depends_on:
       - db
-    image: cptactionhank/atlassian-bitbucket:latest    
+        #image: cptactionhank/atlassian-bitbucket:latest    
+    image: atlassian/bitbucket-server:latest    
     links:
       - db
     ports:
       - "10020:7990"
+      - "7999:7999"
+    volumes:
+      - ./.data/bitbucket:/var/atlassian/application-data/bitbucket
     restart: always    
     environment: 
       JIRA_DB_HOST: db:3306
-      JIRA_DB_PASSWORD: bitbucket
-      JIRA_DB_USER: materliu
+      JIRA_DB_PASSWORD: 
+      JIRA_DB_USER: 
       JIRA_DB_NAME: bitbucket  
 
